:construction: add native props for button

--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -26,11 +26,12 @@
     color: $hover-color;
     background: $hover-background;
     border-color: $hover-border;
+    outline-width: 0px;
   }
   &:disabled,
   &.disabled {
     color: $color;
     background: $background;
-    border-color: $border-color;
+    border-color: $border;
   }
 }
