:construction: add children check

--- a/src/components/menu/_style.scss
+++ b/src/components/menu/_style.scss
@@ -21,6 +21,11 @@
         border-bottom: 0;
         border-left: $menu-item-active-border-width solid $menu-item-active-color;
       }
+      &.disabled {
+        color: $menu-item-disabled-color;
+        pointer-events: none;
+        cursor: default;
+      }
     }
   }
 
